--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
@@ -16,12 +17,23 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^7.2.3",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/platform-server": "^7.2.3",
     "@angular/router": "~7.2.0",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
+    "bootstrap": "^3.4.0",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
+    "firebase": "^6.0.4",
+    "hamburgers": "^1.1.3",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.4.0",
+    "ts-loader": "^5.3.3",
     "tslib": "^1.9.0",
+    "webpack-cli": "^3.2.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -29,9 +41,9 @@
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
