--- a/src/tsconfig.server.json
+++ b/src/tsconfig.server.json
@@ -3,11 +3,14 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "types": [],
-    "module": "es2015",
+    "module": "commonjs",
     "baseUrl": "./"
   },
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "entryModule": "app/app.server.module#AppServerModule"
+  }
 }
